fix: correct mistakes