@@ -7,6 +7,8 @@ import tasks.Status;
 import tasks.Subtask;
 import tasks.Task;
 
+import java.time.LocalDateTime;
+
 import static org.junit.jupiter.api.Assertions.*;
 
 class InMemoryTaskManagerTest extends TaskManagerTest<InMemoryTaskManager> {
@@ -16,26 +18,27 @@ class InMemoryTaskManagerTest extends TaskManagerTest<InMemoryTaskManager> {
     void beforeEach() {
         manager = new InMemoryTaskManager();
         task = new Task("Задача - 1", "Описание - 1",
-                "11:30 12.09.2024", 90);
+                LocalDateTime.of(2024, 9, 12, 11, 30), 90);
         tId = manager.addTask(task);
         epic = new Epic("Эпик - 1", "Описание - 1");
         eId = manager.addEpic(epic);
         sub = new Subtask("Подзадача - 1", "Описание - 1", eId,
-                "11:30 13.09.2024", 90);
+                LocalDateTime.of(2024, 9, 13, 11, 30), 90);
         sId = manager.addSubtask(sub);
         savedTask = manager.getTask(tId);
         savedEpic = manager.getEpic(eId);
         savedSub = manager.getSubtask(sId);
     }
+
     @Test
     void shouldAddTasksOfDifferentTypes() {
         Task task = new Task("Задача - 1", "Тест задачи - 1",
-                "11:30 01.09.2024", 90);
+                LocalDateTime.of(2024, 9, 1, 11, 30), 90);
         final int taskId = manager.addTask(task);
         Epic epic = new Epic("Эпик - 1", "Тест эпика - 1");
         final int epicId = manager.addEpic(epic);
-        Subtask subtask = new Subtask("Подзадача - 1", "Тест позадачи - 1", epicId,
-                "11:30 03.09.2024", 90);
+        Subtask subtask = new Subtask("Подзадача - 1", "Тест подзадачи - 1", epicId,
+                LocalDateTime.of(2024, 9, 3, 11, 30), 90);
         final int subtaskId = manager.addSubtask(subtask);
 
         assertNotNull(manager.getTasks());
@@ -53,12 +56,12 @@ class InMemoryTaskManagerTest extends TaskManagerTest<InMemoryTaskManager> {
         int givenEpicId = 10;
         int givenSubtaskId = 15;
         Task task = new Task(givenTaskId, "Задача - 1", "Тест задачи - 1", Status.NEW,
-                "11:30 13.09.2024", 90);
+                LocalDateTime.of(2024, 9, 13, 11, 30), 90);
         final int taskId = manager.addTask(task);
         Epic epic = new Epic(givenEpicId, "Эпик - 1", "Тест эпика - 1");
         final int epicId = manager.addEpic(epic);
         Subtask subtask = new Subtask(givenSubtaskId, "Подзадача - 1", "Тест подзадачи - 1",
-                Status.NEW, epicId, "11:30 14.09.2024", 90);
+                Status.NEW, epicId, LocalDateTime.of(2024, 9, 14, 11, 30), 90);
         final int subId = manager.addSubtask(subtask);
 
         assertNotEquals(givenTaskId, taskId);
@@ -71,7 +74,7 @@ class InMemoryTaskManagerTest extends TaskManagerTest<InMemoryTaskManager> {
         String name = "Задача - 1";
         String description = "Тест задачи - 1";
         Status status = Status.DONE;
-        Task task = new Task(1, name, description, status, "11:30 15.09.2024", 90);
+        Task task = new Task(1, name, description, status, LocalDateTime.of(2024, 9, 15, 11, 30), 90);
         final int taskId = manager.addTask(task);
 
         assertEquals(name, manager.getTask(taskId).getName());
@@ -81,13 +84,13 @@ class InMemoryTaskManagerTest extends TaskManagerTest<InMemoryTaskManager> {
 
     @Test
     void epicsMustNotHaveIdsOfIrrelevantSubtasks() {
-        Epic epic = new Epic("1. Эпик","Тест эпика - 1");
+        Epic epic = new Epic("1. Эпик", "Тест эпика - 1");
         int e1 = manager.addEpic(epic);
         Subtask sub1 = new Subtask("1. Подзадача", "Тест подзадачи - 1", e1,
-                "11:30 16.09.2024", 90);
+                LocalDateTime.of(2024, 9, 16, 11, 30), 90);
         int s1 = manager.addSubtask(sub1);
         Subtask sub2 = new Subtask("2. Подзадача", "Тест подзадачи - 2", e1,
-                "11:30 17.09.2024", 90);
+                LocalDateTime.of(2024, 9, 17, 11, 30), 90);
         int s2 = manager.addSubtask(sub2);
 
         assertEquals(2, epic.getSubsId().size());
@@ -97,15 +100,15 @@ class InMemoryTaskManagerTest extends TaskManagerTest<InMemoryTaskManager> {
         manager.removeSubtask(s1);
         assertEquals(1, epic.getSubsId().size());
         assertFalse(epic.getSubsId().contains(s1));
-        assertEquals(s2, epic.getSubsId().get(0));
+        assertEquals(s2, epic.getSubsId().getFirst());
     }
 
     @Test
     void settersShouldInfluenceTheDataInsideTheTaskManager() {
         Task task = new Task("1. Задача", "Тест задачи - 1",
-                "11:30 18.09.2024", 90);
+                LocalDateTime.of(2024, 9, 18, 11, 30), 90);
         Task task2 = new Task("1. Задача", "Тест задачи - 1",
-                "11:30 19.09.2024", 90);
+                LocalDateTime.of(2024, 9, 19, 11, 30), 90);
         final int taskId = manager.addTask(task);
         task2.setId(5);
         task.setId(5);
@@ -115,6 +118,5 @@ class InMemoryTaskManagerTest extends TaskManagerTest<InMemoryTaskManager> {
         task.setId(5);
         task.setStatus(Status.DONE);
         assertNotEquals(task2.getStatus(), manager.getTask(taskId).getStatus());
-
     }
 }
